--- a/1-advance-concepts-and-techniques/2-this-keyword/index.html
+++ b/1-advance-concepts-and-techniques/2-this-keyword/index.html
@@ -5,10 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <script
-      src="https://kit.fontawesome.com/ba57058827.js"
-      crossorigin="anonymous"
-    ></script>
     <title>JS: Advance Techniques - this keyword</title>
   </head>
   <body>
@@ -17,6 +13,34 @@
     <section id="left"></section>
     <section id="right"></section>
 
+    <div>
+      <div style="margin-bottom: 20px">
+        <svg
+          width="200"
+          height="200"
+          viewBox="0 0 100 100"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <rect width="100" height="100" rx="10" fill="url(#gradient)" />
+          <path
+            d="M22 72l9-5c2 4 3 7 7 7 3 0 5-1 5-5V47h11v22c0 11-7 14-15 14-9 0-14-5-17-11zM55 71l9-5c2 4 5 7 10 7 4 0 6-2 6-4 0-3-2-4-7-6l-3-1c-8-3-14-7-14-15 0-8 6-14 16-14 7 0 13 2 16 9l-9 5c-2-4-4-5-7-5s-5 2-5 4c0 3 2 4 6 6l3 1c9 3 15 7 15 16 0 9-7 15-17 15-9 0-16-4-19-10z"
+            fill="none"
+            stroke="white"
+            stroke-width="2"
+          />
+          <defs>
+            <linearGradient id="gradient" x1="0" y1="0" x2="1" y2="1">
+              <stop offset="0%" stop-color="rgb(5, 30, 60)" />
+              <stop offset="50%" stop-color="rgb(15, 80, 120)" />
+              <stop offset="100%" stop-color="rgb(40, 0, 60)" />
+            </linearGradient>
+          </defs>
+        </svg>
+      </div>
+
+      <h1 class="title">Master Advance Javascript</h1>
+      <h1 class="title">The Mysterious this keyword</h1>
+    </div>
     <script src="./index.js"></script>
   </body>
 </html>
