--- a/1-advance-concepts-and-techniques/2-this-keyword/index.html
+++ b/1-advance-concepts-and-techniques/2-this-keyword/index.html
@@ -14,7 +14,7 @@
     <section id="right"></section>
 
     <div>
-      <button class="btn">Click Me</button>
+      <!-- <button class="btn">Click Me</button> -->
       <div style="margin-bottom: 20px">
         <svg
           width="200"
